# CppCudaThrust

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  analysis.md  conanfile.txt  ~.gitconfig
sandbox/: device_details.cu  device_info  mandelbrot.cu
src/: CMakeLists.txt  evaluator.cuh  main.cpp  main.cu  poker  poker.cuh
test/: CMakeLists.txt  evaluatorTest.cu  pokerTests.cpp  pokerTests.cu
